infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: us.gcr.io/static-sum-449702-s3/auth #rohanbennur959/url-shortener-auth
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name:  auth-cluster-ip-svc
spec:
  selector:
    app:  auth
  type: ClusterIP
  ports:
    - name:  auth
      port:  3000
      targetPort:  3000
