infra/k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: rohanbennur959/url-shortener-frontend
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name:  frontend-cluster-ip-svc
spec:
  selector:
    app:  frontend
  type: ClusterIP
  ports:
    - name:  frontend
      port:  3000
      targetPort:  3000
