infra/k8s/url-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: "/data"
              name: redis-storage
      volumes:
        - name: redis-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-svc
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
